--- a/forest_fire_ML.ipynb
+++ b/forest_fire_ML.ipynb
@@ -27,15 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "outputs": [
     {
-     "data": {
-      "text/plain": "0      0.000000\n1      0.000000\n2      0.000000\n3      0.000000\n4      0.000000\n         ...   \n512    2.561650\n513    4.687572\n514    3.107484\n515    0.000000\n516    0.000000\nName: area, Length: 517, dtype: float64"
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# reduce skew\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m area \u001B[38;5;241m=\u001B[39m \u001B[43mdf\u001B[49m[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124marea\u001B[39m\u001B[38;5;124m'\u001B[39m]\u001B[38;5;241m.\u001B[39mapply(\u001B[38;5;28;01mlambda\u001B[39;00m x: np\u001B[38;5;241m.\u001B[39mlog(x \u001B[38;5;241m+\u001B[39m np\u001B[38;5;241m.\u001B[39msqrt(x\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m2\u001B[39m \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m1\u001B[39m)))\n\u001B[0;32m      3\u001B[0m area\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
